// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapHTTPRouterWithSwaggerUI should be bypassed with no debug env 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "SOCKET_TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
    Array [
      "ERRORS_DESCRIPTORS",
    ],
    Array [
      "DEFAULT_ERROR_CODE",
    ],
    Array [
      "SHIELD_CHAR",
    ],
    Array [
      "MAX_CLEAR_CHARS",
    ],
    Array [
      "MAX_CLEAR_RATIO",
    ],
    Array [
      "SENSIBLE_PROPS",
    ],
    Array [
      "SENSIBLE_HEADERS",
    ],
  ],
  "debugCalls": Array [
    Array [
      "⌛ - Delay service initialized.",
    ],
    Array [
      "⏳ - Cancelling pending timeouts:",
      0,
    ],
    Array [
      "✅ - Closing HTTP server.",
    ],
    Array [
      "✔️ - HTTP server closed!",
    ],
    Array [
      "❤️ - Initializing the APM service.",
    ],
    Array [
      "👣 - Logging service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "📇 - Process service initialized.",
    ],
    Array [
      "🕶️ - Initializing the obfuscator service.",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
    Array [
      "🛂 - Initializing the importer!",
    ],
  ],
  "logErrorCalls": Array [
    Array [
      "🔂 - Running in \\"test\\" environment.",
    ],
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:22223\\".",
    ],
    Array [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": Array [],
}
`;

exports[`wrapHTTPRouterWithSwaggerUI should serve Swagger HTML 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "SOCKET_TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
    Array [
      "ERRORS_DESCRIPTORS",
    ],
    Array [
      "DEFAULT_ERROR_CODE",
    ],
    Array [
      "SHIELD_CHAR",
    ],
    Array [
      "MAX_CLEAR_CHARS",
    ],
    Array [
      "MAX_CLEAR_RATIO",
    ],
    Array [
      "SENSIBLE_PROPS",
    ],
    Array [
      "SENSIBLE_HEADERS",
    ],
  ],
  "data": "<!-- HTML for static distribution bundle build -->
<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\">
    <title>Swagger UI</title>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"./swagger-ui.css\\" >
    <link rel=\\"icon\\" type=\\"image/png\\" href=\\"./favicon-32x32.png\\" sizes=\\"32x32\\" />
    <link rel=\\"icon\\" type=\\"image/png\\" href=\\"./favicon-16x16.png\\" sizes=\\"16x16\\" />
    <style>
      html
      {
        box-sizing: border-box;
        overflow: -moz-scrollbars-vertical;
        overflow-y: scroll;
      }

      *,
      *:before,
      *:after
      {
        box-sizing: inherit;
      }

      body
      {
        margin:0;
        background: #fafafa;
      }
    </style>
  </head>

  <body>
    <div id=\\"swagger-ui\\"></div>

    <script src=\\"./swagger-ui-bundle.js\\"> </script>
    <script src=\\"./swagger-ui-standalone-preset.js\\"> </script>
    <script>
    window.onload = function() {
      // Begin Swagger UI call region
      const ui = SwaggerUIBundle({
        url: \\"https://petstore.swagger.io/v2/swagger.json\\",
        dom_id: '#swagger-ui',
        deepLinking: true,
        presets: [
          SwaggerUIBundle.presets.apis,
          SwaggerUIStandalonePreset
        ],
        plugins: [
          SwaggerUIBundle.plugins.DownloadUrl
        ],
        layout: \\"StandaloneLayout\\"
      })
      // End Swagger UI call region

      window.ui = ui
    }
  </script>
  </body>
</html>
",
  "debugCalls": Array [
    Array [
      "⌛ - Delay service initialized.",
    ],
    Array [
      "⏳ - Cancelling pending timeouts:",
      0,
    ],
    Array [
      "✅ - Closing HTTP server.",
    ],
    Array [
      "✔️ - HTTP server closed!",
    ],
    Array [
      "❤️ - Initializing the APM service.",
    ],
    Array [
      "👣 - Logging service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "📇 - Process service initialized.",
    ],
    Array [
      "🕶️ - Initializing the obfuscator service.",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
    Array [
      "🛂 - Dynamic import of: ecstatic",
    ],
    Array [
      "🛂 - Dynamic import of: swagger-ui-dist",
    ],
    Array [
      "🛂 - Initializing the importer!",
    ],
  ],
  "headers": Object {
    "cache-control": "max-age=3600",
    "connection": "close",
    "content-length": "1424",
    "content-type": "text/html",
    "date": undefined,
    "etag": undefined,
    "last-modified": undefined,
    "server": undefined,
  },
  "logErrorCalls": Array [
    Array [
      "🔂 - Running in \\"test\\" environment.",
    ],
    Array [
      "💁 - Serving the public API docs: http://localhost:22224/docs?url=http%3A%2F%2Flocalhost%3A22224%2Fv1%2FopenAPI",
    ],
    Array [
      "💁 - Serving the private API docs: http://localhost:22224/docs?url=http%3A%2F%2Flocalhost%3A22224%2Fv1%2FopenAPI%3Faccess_token%3Doudelali",
    ],
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:22224\\".",
    ],
    Array [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": Array [],
  "status": 200,
}
`;

exports[`wrapHTTPRouterWithSwaggerUI should work 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "SOCKET_TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
    Array [
      "ERRORS_DESCRIPTORS",
    ],
    Array [
      "DEFAULT_ERROR_CODE",
    ],
    Array [
      "SHIELD_CHAR",
    ],
    Array [
      "MAX_CLEAR_CHARS",
    ],
    Array [
      "MAX_CLEAR_RATIO",
    ],
    Array [
      "SENSIBLE_PROPS",
    ],
    Array [
      "SENSIBLE_HEADERS",
    ],
  ],
  "data": Object {
    "ping": "pong",
  },
  "debugCalls": Array [
    Array [
      "⌛ - Delay service initialized.",
    ],
    Array [
      "⏳ - Cancelling pending timeouts:",
      0,
    ],
    Array [
      "⏳ - Cleared a delay",
    ],
    Array [
      "⏳ - Created a delay:",
      30000,
    ],
    Array [
      "✅ - Closing HTTP server.",
    ],
    Array [
      "✔️ - HTTP server closed!",
    ],
    Array [
      "❤️ - Initializing the APM service.",
    ],
    Array [
      "👣 - Logging service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "📇 - Process service initialized.",
    ],
    Array [
      "🕶️ - Initializing the obfuscator service.",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
    Array [
      "🛂 - Dynamic import of: ecstatic",
    ],
    Array [
      "🛂 - Dynamic import of: swagger-ui-dist",
    ],
    Array [
      "🛂 - Initializing the importer!",
    ],
  ],
  "headers": Object {
    "connection": "close",
    "content-type": "application/json",
    "date": undefined,
    "etag": undefined,
    "last-modified": undefined,
    "server": undefined,
    "transaction-id": "0",
    "transfer-encoding": "chunked",
  },
  "logErrorCalls": Array [
    Array [
      "🔂 - Running in \\"test\\" environment.",
    ],
    Array [
      "💁 - Serving the public API docs: http://localhost:22222/docs?url=http%3A%2F%2Flocalhost%3A22222%2Fv1%2FopenAPI",
    ],
    Array [
      "💁 - Serving the private API docs: http://localhost:22222/docs?url=http%3A%2F%2Flocalhost%3A22222%2Fv1%2FopenAPI%3Faccess_token%3Doudelali",
    ],
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:22222\\".",
    ],
    Array [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": Array [
    Array [
      "CALL",
      "{\\"id\\":\\"0\\",\\"protocol\\":\\"http\\",\\"ip\\":\\"127.0.0.1\\",\\"startInBytes\\":147,\\"startOutBytes\\":0,\\"startTime\\":1267833600000,\\"url\\":\\"/v1/ping\\",\\"method\\":\\"GET\\",\\"reqHeaders\\":{\\"accept\\":\\"application/json, text/plain, */*\\",\\"user-agent\\":\\"__avoid_axios_version__\\",\\"host\\":\\"localhost:22222\\",\\"connection\\":\\"close\\"},\\"errored\\":false,\\"endTime\\":1267833600000,\\"endInBytes\\":147,\\"endOutBytes\\":179,\\"statusCode\\":200,\\"resHeaders\\":{\\"content-type\\":\\"application/json\\"},\\"operationId\\":\\"getPing\\"}",
    ],
  ],
  "status": 200,
}
`;
